Add gulp as dependency for minifying js files and set non-production dependencies as 'devDependencies'.

--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   },
   "author": "Edgar Alexander Franco <edgaralexanderfr@gmail.com> (http://www.edgaralexanderfr.com.ve/)",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-uglify": "^3.0.1",
     "phaser-ce": "^2.11.0"
   }
 }
