Define getProjectCurrentVersion(function) in gulpfile.js to retrieve the current version for the project and 'git-describe' is also added as a devDependency.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {},
   "devDependencies": {
+    "git-describe": "^4.0.3",
     "gulp": "^4.0.0",
     "gulp-uglify": "^3.0.1",
     "phaser-ce": "^2.11.0"
