--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "devDependencies": {
     "git-describe": "^4.0.3",
     "gulp": "^4.0.0",
+    "gulp-typedoc": "^2.2.0",
     "gulp-uglify": "^3.0.1",
-    "phaser-ce": "^2.11.0"
+    "phaser-ce": "^2.11.0",
+    "typedoc": "^0.11.1"
   }
 }
