--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   },
   "author": "Edgar Alexander Franco <edgaralexanderfr@gmail.com> (http://www.edgaralexanderfr.com.ve/)",
   "license": "ISC",
-  "dependencies": {},
-  "devDependencies": {
-    "git-describe": "^4.0.3",
+  "dependencies": {
     "gulp": "^4.0.0",
     "gulp-connect": "^5.5.0",
-    "gulp-typedoc": "^2.2.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
-    "phaser-ce": "^2.11.0",
-    "typedoc": "^0.11.1",
     "typescript": "^3.0.1"
+  },
+  "devDependencies": {
+    "git-describe": "^4.0.3",
+    "gulp-typedoc": "^2.2.0",
+    "phaser-ce": "^2.11.0",
+    "typedoc": "^0.11.1"
   }
 }
