--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "gulp-connect": "^5.5.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
-    "typescript": "^3.0.1"
-  },
-  "devDependencies": {
+    "typescript": "^3.0.1",
     "git-describe": "^4.0.3",
     "gulp-typedoc": "^2.2.0",
-    "phaser-ce": "^2.11.0",
     "typedoc": "^0.11.1"
+  },
+  "devDependencies": {
+    "phaser-ce": "^2.11.0"
   }
 }
