--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Edgar Alexander Franco <edgaralexanderfr@gmail.com> (http://www.edgaralexanderfr.com.ve/)",
   "license": "ISC",
   "dependencies": {
+    "browser-sync": "^2.26.3",
     "git-describe": "^4.0.3",
     "gulp": "^4.0.0",
     "gulp-typedoc": "^2.2.0",
