--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "npm install && \"./node_modules/.bin/gulp\" && \"./node_modules/.bin/gulp\" browser-sync",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Edgar Alexander Franco <edgaralexanderfr@gmail.com> (http://www.edgaralexanderfr.com.ve/)",
