1. Adjust game size to page size and listen to the page resizes. 2. Add npm module for 'minify-css' task and create the task itself. 3. Add style 'app/css/index.css'.

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "browser-sync": "^2.26.3",
     "git-describe": "^4.0.3",
     "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
     "gulp-typedoc": "^2.2.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "gulp-uglify": "^3.0.1",
