--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.26.3",
-    "git-describe": "^4.0.3",
+    "git-describe": "^4.0.4",
     "gulp": "^4.0.0",
     "gulp-clean-css": "^4.0.0",
-    "gulp-typedoc": "^2.2.0",
-    "gulp-typescript": "^5.0.0-alpha.3",
-    "gulp-uglify": "^3.0.1",
-    "phaser-ce": "^2.11.0",
+    "gulp-typedoc": "^2.2.2",
+    "gulp-typescript": "^5.0.0",
+    "gulp-uglify": "^3.0.2",
+    "phaser-ce": "^2.12.0",
     "typedoc": "^0.11.1",
-    "typescript": "^3.0.1"
+    "typescript": "^3.3.3333"
   }
 }
